Bug 1260835 - Atomics.wait returns strings + remove symbolic constants. r=jolesen

--HG--
extra : rebase_source : 9ff59a7ef9669cdcc63fa599cc871e6c57a9ed5a